force-app/main/default/objects/Test__c/fields/Testauto__c.field-meta.xml
<CustomField>
    <fullName>Testauto__c</fullName>
    <displayFormat>a-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Testauto</label>
    <type>AutoNumber</type>
</CustomField>