force-app/main/default/objects/Test__c/fields/Testform__c.field-meta.xml
<CustomField>
    <fullName>Testform__c</fullName>
    <formula>Testauto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Testform</label>
    <type>Text</type>
</CustomField>