force-app/main/default/objects/Test__c/fields/Testmult__c.field-meta.xml
<CustomField>
    <fullName>Testmult__c</fullName>
    <label>Testmult</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Testmpq</fullName>
            </value>
            <value>
                <fullName>Testmpw</fullName>
            </value>
            <value>
                <fullName>Testmpe</fullName>
            </value>
            <value>
                <fullName>Testmpr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>