force-app/main/default/objects/Test__c/fields/Testpick__c.field-meta.xml
<CustomField>
    <fullName>Testpick__c</fullName>
    <label>Testpick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>testpq</fullName>
            </value>
            <value>
                <fullName>testpw</fullName>
            </value>
            <value>
                <fullName>testpe</fullName>
            </value>
            <value>
                <fullName>testpr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>