force-app/main/default/objects/Test__c/fields/Testtext__c.field-meta.xml
<CustomField>
    <fullName>Testtext__c</fullName>
    <label>Testtext</label>
    <length>100</length>
    <type>Text</type>
</CustomField>